2002-11-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-use-unseen): Remove
	duplicate definition.
	(mew-shimbun-unseen-regex): New inline macro.
	(mew-shimbun-goto-folder, mew-shimbun-unseen-remove-advice): Use
	`mew-shimbun-unseen-regex' macro.

2002-11-26  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/shimbun.el (shimbun-mime-encode-string): Wrap with
	`condition-case'.

2002-11-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-this-url-1): Keep position when new-session
	and `w3m-view-this-url-new-session-in-background' is non-nil.

2002-11-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-mime-text/html-w3m): Use
	`match-string-no-properties' if it exist.

2002-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Use an optional argument and the function
	`interactive' to examine whether it is called interactively
	instead of the function `interactive-p'.
	Suggested by TSUCHIYA Masatoshi.
	(w3m-goto-url-new-session): Ditto.
	(w3m): Ditto.
	(w3m-select-buffer-show-this-line): Ditto.

2002-11-14  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-attributes): Bind `case-fold-search' to t.

2002-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Add some dictionaries.
	(w3m-search-default-engine): Default to google.
	(w3m-search-quick-search-engine-alist): Add iij-archie; add
	customization type.
	(w3m-search-prefer-japanese-site): New user option.
	(w3m-search-inhibited-japanese-engines): New user option.
	(w3m-search-quick-search-engines): New function.
	(w3m-search-quick-search-handler): Maybe use a Japanese site; use
	`w3m-search-quick-search-engines' to merge
	`w-s-engine-alist' and `w-s-quick-search-engine-alist'.

	* w3m.el (w3m): Allow quicksearch urls if interactive.

2002-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3.el (w3m-view-this-url-1): Copy `w3m-current-url' into a
	copied buffer.