@@ -1,3 +1,8 @@
+2002-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-tabmenu.el (w3m-tab-menubar-update): Do nothing when there's
+	no menubar.
+
 2002-11-26  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* shimbun/mew-shimbun.el (mew-shimbun-use-unseen): Remove
